--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
 body{
   background-color: #0e0e0e;
 }
-
-.success{
-  background-color: #50ec02;
-}
-.warning {
-  background-color: red;
+*{
+  color: #d98e8e;
 }
